# DSP

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json
.rag/cross_repo/: cross_repo__fft_integration.md  cross_repo__hybrid_backend.md  cross_repo__signal_gen_integration.md  cross_repo__signal_to_spectrum.md  cross_repo__zero_copy.md
.rag/meta/: claude_card.md  doxygen_modules_index.md
.rag/use_cases/: python__common_references_smoke.md  python__common_smoke.md  python__heterodyne_heterodyne.md  python__heterodyne_heterodyne_comparison.md  python__heterodyne_heterodyne_rocm.md  python__heterodyne_heterodyne_step_by_step.md  python__linalg_capon.md  python__linalg_cholesky_inverter_rocm.md  python__linalg_matrix_csv_comparison.md  python__radar_fm_correlator.md  python__radar_fm_correlator_rocm.md  python__radar_range_angle.md  python__signal_generators_delayed_form_signal.md  python__signal_generators_form_signal.md  python__signal_generators_form_signal_rocm.md  python__signal_generators_lfm_analytical_delay.md  python__spectrum_ai_filter_pipeline.md  python__spectrum_ai_fir_demo.md  python__spectrum_ai_pipeline.md  python__spectrum_filters_stage1.md  python__spectrum_fir_filter_rocm.md  python__spectrum_iir_filter_rocm.md  python__spectrum_iir_plot.md  python__spectrum_kalman_rocm.md  python__spectrum_kaufman_rocm.md  python__spectrum_lch_farrow.md  python__spectrum_lch_farrow_rocm.md  python__spectrum_moving_average_rocm.md  python__spectrum_process_magnitude_rocm.md  python__spectrum_spectrum_find_all_maxima_rocm.md  python__spectrum_spectrum_maxima_finder_rocm.md  python__stats_compute_all.md  python__stats_snr_estimator.md  python__stats_statistics_float_rocm.md  python__stats_statistics_rocm.md  python__strategies_base_pipeline.md  python__strategies_debug_steps.md  python__strategies_farrow_pipeline.md  python__strategies_params.md  python__strategies_scenario_builder.md  (+3 more)
Doc/: Full_Reference.md  INDEX.md  PyPanelAntennas.md  Quick_Reference.md
Doc/Architecture/: Architecture_C1_SystemContext.md  Architecture_C2_Container.md  Architecture_C3_Component.md  Architecture_C4_Code.md  Architecture_DFD.md  Architecture_INDEX.md  Architecture_Seq.md  README.md  dependencies.md  dsp-gpu-c2.puml  gpuworklib-c2.puml  repo_map.md  repo_structure.md
Doc/Doxygen/: CREATE_DOXYGEN_PROMPT.md  Doxyfile  README.md  build_docs.bat  build_docs.sh  copy_images.sh
Doc/Doxygen/DrvGPU/: Doxyfile
Doc/Doxygen/pages/: architecture.md  build_guide.md  groups.md  mainpage.md  modules_overview.md  tests_overview.md
Doc/DrvGPU/: API.md  Architecture.md  Command.md  Full.md  Memory.md  OpenCL.md  Quick.md
Doc/DrvGPU/Services/: Full.md  Quick.md
Doc/Modules/: README.md
Doc/Modules/filters/: gpu_filters_research.md
Doc/Modules/fm_correlator/: API.md  Full.md  Quick.md  (+1 more)
Doc/Python/: fm_correlator_api.md  lch_farrow_api.md  rocm_modules_api.md  signal_generators_api.md  spectrum_maxima_api.md  statistics_api.md  vector_algebra_api.md
Doc/Python_test/: Full.md  Quick.md  gen_pdf.py  python_test_refactoring.md
Doc/addition/Capon/capon_test/: CMakeLists.txt
Doc/addition/Capon/capon_test/include/: capon_relief.h  inv_schulz.h  mesh_grid.h  threshold_processing.h
Doc/addition/Capon/capon_test/src/: capon_relief.cpp  inv_schulz.cpp  main.cpp  mesh_grid.cpp  threshold_processing.cpp
Doc/python_bindings/: API.md  README.md
Examples/: GPUProfiler_SetGPUInfo.md
Examples/GetGPU_and_Mellanox/: CMakeLists.txt  README.md  gpu_mellanox_detector.hpp  main.cpp
Python/: gpuworklib.py
Python/common/: __init__.py  base.py  configs.py  gpu_context.py  gpu_loader.py  reporters.py  result.py  runner.py  test_base.py
Python/heterodyne/: conftest.py  factories.py  heterodyne_base.py  heterodyne_test_base.py  t_heterodyne.py  t_heterodyne_comparison.py  t_heterodyne_rocm.py  t_heterodyne_step_by_step.py  test_heterodyne_comparison.py
Python/integration/: conftest.py  factories.py  t_fft_integration.py  t_hybrid_backend.py  t_signal_gen_integration.py  t_signal_to_spectrum.py  t_zero_copy.py  test_gpuworklib.py  test_hybrid_backend.py  test_zero_copy.py
Python/linalg/: README.md  conftest.py  factories.py  t_capon.py  t_cholesky_inverter_rocm.py  t_matrix_csv_comparison.py  test_capon.py
Python/radar/: t_fm_correlator.py  t_fm_correlator_rocm.py  t_range_angle.py  test_fm_correlator_rocm.py
Python/signal_generators/: conftest.py  example_form_signal.py  factories.py  signal_base.py  signal_test_base.py  t_delayed_form_signal.py  t_form_signal.py  t_form_signal_rocm.py  t_lfm_analytical_delay.py  test_lfm_analytical_delay.py
Python/spectrum/: conftest.py  factories.py  filter_base.py  filter_test_base.py  plot_report_filters.py  t_ai_filter_pipeline.py  t_ai_fir_demo.py  t_filters_stage1.py  t_fir_filter_rocm.py  t_iir_filter_rocm.py  t_iir_plot.py  t_kalman_rocm.py  t_kaufman_rocm.py  t_lch_farrow.py  t_lch_farrow_rocm.py  t_moving_average_rocm.py  t_process_magnitude_rocm.py  t_spectrum_find_all_maxima_rocm.py  t_spectrum_maxima_finder_rocm.py  test_ai_filter_pipeline.py  test_ai_fir_demo.py  test_filters_stage1.py  test_lch_farrow.py  test_lch_farrow_rocm.py  test_process_magnitude_rocm.py  test_spectrum_find_all_maxima_rocm.py  test_spectrum_maxima_finder_rocm.py
Python/stats/: conftest.py  factories.py  t_compute_all.py  t_snr_estimator.py  t_statistics_float_rocm.py  t_statistics_rocm.py  test_snr_estimator.py  test_statistics_rocm.py
Python/strategies/: README.md  conftest.py  debug_pipeline_steps.py  factories.py  farrow_delay.py  numpy_reference.py  pipeline_runner.py  pipeline_step_validator.py  plot_strategies_results.py  scenario_builder.py  signal_factory.py  signal_generators_strategy.py  strategy_base.py  strategy_test_base.py  t_base_pipeline.py  t_debug_steps.py  t_params.py  t_scenario_builder.py  t_strategies_pipeline.py  t_strategies_step_by_step.py  test_base_pipeline.py  test_debug_steps.py  test_farrow_pipeline.py  test_strategies_pipeline.py  test_timing_analysis.py
cmake/: fetch_deps.cmake
config/: tests_order.txt
scripts/: build_all_debian.sh
(+144 files in other folders)
