cmake_minimum_required(VERSION 3.25)
project(DSP LANGUAGES NONE)

include(FetchContent)
include(cmake/fetch_deps.cmake)

# ── Условная сборка — управляется через пресеты ────────────────────
option(DSP_BUILD_CORE              "Build core"              ON)
option(DSP_BUILD_SPECTRUM          "Build spectrum"          ON)
option(DSP_BUILD_STATS             "Build stats"             ON)
option(DSP_BUILD_SIGNAL_GENERATORS "Build signal_generators" ON)
option(DSP_BUILD_HETERODYNE        "Build heterodyne"        ON)
option(DSP_BUILD_LINALG            "Build linalg"            ON)
option(DSP_BUILD_RADAR             "Build radar"             ON)
option(DSP_BUILD_STRATEGIES        "Build strategies"        ON)

# Централизованный FetchContent_Declare ПЕРЕД всеми зависимыми!
# Решает diamond dependency — все модули получают одну версию.
if(DSP_BUILD_CORE)
  fetch_dsp_core()
endif()
if(DSP_BUILD_SPECTRUM)
  fetch_dsp_spectrum()
endif()
if(DSP_BUILD_STATS)
  fetch_dsp_stats()
endif()
if(DSP_BUILD_SIGNAL_GENERATORS)
  fetch_dsp_signal_generators()
endif()
if(DSP_BUILD_HETERODYNE)
  fetch_dsp_heterodyne()
endif()
if(DSP_BUILD_LINALG)
  fetch_dsp_linalg()
endif()
if(DSP_BUILD_RADAR)
  fetch_dsp_radar()
endif()
if(DSP_BUILD_STRATEGIES)
  fetch_dsp_strategies()
endif()
